--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,8 @@ body{
     font-size: 140px;
     font-weight: bolder;
     line-height: 120px;
-    background: linear-gradient(120deg, rgb(5, 0, 97) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);;
+    background: linear-gradient(120deg, rgb(5, 0, 97) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background-clip:text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: 0.2s ease-out;
